# Lab1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
